--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-switch": "^2.3.0",
     "react-tradingview-widget": "^1.2.2",
     "reactstrap": "^5.0.0-beta",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
