--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
