--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.9",
